--- a/index.html
+++ b/index.html
@@ -774,13 +774,15 @@
 <section class="assinaturas">
   <p>Maceió, <input type="text" style="width:100px;"> de <input type="text" style="width:120px;"> de 202<input type="text" style="width:40px;"></p>
   
-  <div style="margin-top:30px;">
-    <hr style="width:300px; margin-left:0;">
+  <div style="margin-top:50px;">
+    <!-- <hr style="width:300px; margin-left:0;"> -->
+    <input type="text" class="inline-input" style="width:600px;">
     <p>Assinatura Paciente</p>
   </div>
   
-  <div style="margin-top:30px;">
-    <hr style="width:300px; margin-left:0;">
+  <div style="margin-top:50px;">
+    <!-- <hr style="width:300px; margin-left:0;"> -->
+    <input type="text" class="inline-input" style="width:600px;">
     <p>Assinatura do Profissional</p>
   </div>
 </section>
@@ -828,8 +830,6 @@
     vertical-align: top;
   }
 </style>
-
-  
 
 </body>
 </html>
